fixing bug on hover and removing small  white space around images

--- a/_sass/modules/_buttons.scss
+++ b/_sass/modules/_buttons.scss
@@ -9,4 +9,11 @@
     padding: 0.5rem 3.5rem;
 
     border-radius: 0.8rem;
+
+	@include transition(ease-in-out, 0.5s);
+
+    &:hover {
+    	background: lighten($color__cta--bg, 20%);
+		@include transition(ease-in-out, 0.5s);
+    }
 }
